# bevy_workspace

./: Cargo.toml
bounce/: Cargo.toml
bounce/src/: background.rs  config.rs  lib.rs  loading.rs  main.rs  menu.rs  score.rs
bounce/src/game/: ball.rs  base.rs  battle.rs  effects.rs  enemy.rs  hint.rs  mod.rs  physics.rs  player.rs  slits.rs
bounce/src/utils/: collide.rs  damp.rs  mod.rs
jaipur/: Cargo.toml
jaipur/src/: main.rs  states.rs
mesh2d/: Cargo.toml
mesh2d_vertex_color_texture/: Cargo.toml
mesh2d_vertex_color_texture/src/: main.rs
move_sprite/: Cargo.toml
move_sprite/src/: main.rs
shapes/: Cargo.toml
shapes/src/: main.rs
sprite/: Cargo.toml
sprite/src/: main.rs
sprite_flipping/: Cargo.toml
sprite_flipping/src/: main.rs
sprite_sheet/: Cargo.toml
sprite_sheet/src/: main.rs
src/: main.rs
system_param/: Cargo.toml
system_param/src/: main.rs
text2d/: Cargo.toml
text2d/src/: main.rs
transparency/: Cargo.toml
transparency/src/: main.rs
