[package]
name = "bevy_workspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "mesh2d",
    "sprite",
    "move_sprite",
    "transparency",
    "sprite_sheet",
    "sprite_flipping",
    "shapes",
    "text2d",
    "mesh2d_vertex_color_texture",
    "system_param",
    "jaipur"
]

[dependencies]
bevy = { version = "0.8.1", features = ["dynamic"]  }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
