[package]
name = "bounce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['cdylib', 'rlib']

[dependencies]
bevy = { version = "0.8.1", features = ["dynamic"]  }
itertools = "0.10"
bevy_kira_audio = { version = "0.12", features = [
    "wav",
    "flac",
    "ogg"
] }